# tauri-typed-invoke

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
